# crypto-trader

./: .gitignore  Cargo.toml  config.json.dist
migrations/2021-08-08-220614_create_transactions/: up.sql
migrations/2021-08-10-100021_create_finished_transactions/: down.sql  up.sql
src/: main.rs  schema.rs
src/bot/: mod.rs
src/bot/trading/: broker.rs  mod.rs
src/crypto/: balances.rs  coin.rs  mod.rs  orderbook_old.rs
src/crypto/orderbook/: mod.rs
src/crypto/treasury/: mod.rs
src/database/: mod.rs
src/exchanges/: mod.rs
src/exchanges/kraken/: bookkeeper.rs  client.rs  mod.rs
src/exchanges/mandala/: bookkeeper.rs  client.rs  mod.rs  utils.rs
src/utils/: config.rs  mod.rs
