[package]
name = "poppy"
version = "0.1.0"
authors = ["Wesley Peeters <wesleyp@hey.com>"]
edition = "2018"
#build = "stable-aarch64-apple-darwin"
host = ["stable-aarch64-apple-darwin"]
#target = ["aarch64-apple-darwin"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0.0", features = ["derive"] }
hashbrown = {version = "0.9.1", "features" = ["serde"] }
log = "0.4"
env_logger = "0.8.2"
anyhow = "1.0"
lazy_static = "1.4.0"
async-trait = "0.1.42"
tokio = {version = "1.1.0", features = ["full"]}
coinbase-pro-rs = "0.6.9"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
websocket-lite = "0.5.0"
parking_lot = "0.11.1"
url = "2.1.0"
minreq = { version = "2.3.1", features = ["https", "json-using-serde"] }
diesel = { version = "1.4.6", features = ["mysql", "extras", "uuidv07"] }
barrel = { version = "0.6.5", features = ["mysql"] }
r2d2 = "0.8.5"
diesel-derive-enum = { version = "1", features = ["mysql"] }
hmac = "0.10.1"
sha2 = "0.9.3"
hex = "0.4.3"
serde_repr = "0.1"
round = "0.1.0"
tungstenite = "0.12.0"
tokio-tungstenite = "0.13.0"
decorum = "0.3.1"
itertools = "0.10.0"
base64 = {version = "0.13.0"}